tests/syntax/bad/testfile-semicolon-3.scala

class A { def foo(){} var x = 1 }
object Main { def main(args: Array[String]) { } }
